--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
   "name": "goit-js-hw-11",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
+  "author": "Evgeniy <evgeniy19021983@gmail.com>",
+  "license": "ISC",
+  "homepage": "https://Evgeniy19021983.github.io/goit-js-hw-11",
   "scripts": {
     "dev": "vite",
     "build": "vite build --base=/goit-js-hw-11/",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "npm run build && gh-pages -d dist"
   },
-  "devDependencies": {
-    "glob": "^8.1.0",
-    "vite": "^4.5.2"
-  },
-  "author": "Evgeniy <evgeniy19021983@gmail.com>",
-  "license": "ISC",
   "dependencies": {
     "axios": "^1.11.0",
     "izitoast": "^1.4.0",
     "simplelightbox": "^2.14.3",
     "vite-plugin-full-reload": "^1.2.0",
     "vite-plugin-html-inject": "^1.0.1"
+  },
+  "devDependencies": {
+    "glob": "^8.1.0",
+    "vite": "^4.5.2",
+    "gh-pages": "^6.0.0"
   }
 }
