--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "vite-plugin-html-inject": "^1.0.1"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^28.0.6",
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "gh-pages": "^6.0.0",
     "glob": "^8.1.0",
-    "vite": "^4.5.2",
-    "gh-pages": "^6.0.0"
+    "vite": "^4.5.2"
   }
 }
