--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "vite",
     "build": "vite build --base=/goit-js-hw-11/",
     "preview": "vite preview",
-    "deploy": "npm run build && gh-pages -d dist"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "axios": "^1.11.0",
